--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
 aiodns==1.1.1
 aiohttp==3.4.4
+aioredis==1.2.0
+async-timeout==3.0.1
+attrs==18.2.0
 cchardet==2.1.4
+chardet==3.0.4
+flake8==3.6.0
+hiredis==0.3.0
+idna==2.8
+idna-ssl==1.1.0
 marshmallow==2.16.3
+mccabe==0.6.1
+multidict==4.5.2
+pycares==2.3.0
+pycodestyle==2.4.0
+pyflakes==2.0.0
+yarl==1.3.0
